try using mathjax

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,10 @@
+# MathJax Configuration
+mathjax:
+  enable: true
+  input: "tex" # Use TeX input format
+  output: "html" # Render as HTML
+
+
 markdown: kramdown
 
 kramdown:
